# internal/modules/soal/dto/soal_dto.go
@@ -6,59 +6,62 @@ import (
 )
 
 type CreateSoalRequest struct {
-	IdBankSoal  string                 `json:"id_bank_soal" form:"id_bank_soal" validate:"required"`
-	NoSoal      int                    `json:"no_soal" form:"no_soal"`
-	Soal        string                 `json:"soal" form:"soal"`
-	GambarSoal  *multipart.FileHeader  `form:"gambar_soal"`
-	OpsiA       string                 `json:"opsi_a" form:"opsi_a"`
-	OpsiB       string                 `json:"opsi_b" form:"opsi_b"`
-	OpsiC       string                 `json:"opsi_c" form:"opsi_c"`
-	OpsiD       string                 `json:"opsi_d" form:"opsi_d"`
-	OpsiE       string                 `json:"opsi_e" form:"opsi_e"`
-	GambarA     *multipart.FileHeader  `form:"gambar_a"`
-	GambarB     *multipart.FileHeader  `form:"gambar_b"`
-	GambarC     *multipart.FileHeader  `form:"gambar_c"`
-	GambarD     *multipart.FileHeader  `form:"gambar_d"`
-	GambarE     *multipart.FileHeader  `form:"gambar_e"`
-	Kunci       string                 `json:"kunci" form:"kunci" validate:"required,len=1"`
+	IdBankSoal     string                `json:"id_bank_soal" form:"id_bank_soal" validate:"required"`
+	IdKategoriSoal string                `json:"id_kategori_soal" form:"id_kategori_soal"`
+	NoSoal         int                   `json:"no_soal" form:"no_soal"`
+	Soal           string                `json:"soal" form:"soal"`
+	GambarSoal     *multipart.FileHeader `form:"gambar_soal"`
+	OpsiA          string                `json:"opsi_a" form:"opsi_a"`
+	OpsiB          string                `json:"opsi_b" form:"opsi_b"`
+	OpsiC          string                `json:"opsi_c" form:"opsi_c"`
+	OpsiD          string                `json:"opsi_d" form:"opsi_d"`
+	OpsiE          string                `json:"opsi_e" form:"opsi_e"`
+	GambarA        *multipart.FileHeader `form:"gambar_a"`
+	GambarB        *multipart.FileHeader `form:"gambar_b"`
+	GambarC        *multipart.FileHeader `form:"gambar_c"`
+	GambarD        *multipart.FileHeader `form:"gambar_d"`
+	GambarE        *multipart.FileHeader `form:"gambar_e"`
+	Kunci          string                `json:"kunci" form:"kunci" validate:"required,len=1"`
 }
 
 type UpdateSoalRequest struct {
-	NoSoal     int                    `json:"no_soal" form:"no_soal"`
-	Soal       string                 `json:"soal" form:"soal"`
-	GambarSoal *multipart.FileHeader  `form:"gambar_soal"`
-	OpsiA      string                 `json:"opsi_a" form:"opsi_a"`
-	OpsiB      string                 `json:"opsi_b" form:"opsi_b"`
-	OpsiC      string                 `json:"opsi_c" form:"opsi_c"`
-	OpsiD      string                 `json:"opsi_d" form:"opsi_d"`
-	OpsiE      string                 `json:"opsi_e" form:"opsi_e"`
-	GambarA    *multipart.FileHeader  `form:"gambar_a"`
-	GambarB    *multipart.FileHeader  `form:"gambar_b"`
-	GambarC    *multipart.FileHeader  `form:"gambar_c"`
-	GambarD    *multipart.FileHeader  `form:"gambar_d"`
-	GambarE    *multipart.FileHeader  `form:"gambar_e"`
-	Kunci      string                 `json:"kunci" form:"kunci" validate:"required,len=1"`
+	IdKategoriSoal string                `json:"id_kategori_soal" form:"id_kategori_soal"`
+	NoSoal         int                   `json:"no_soal" form:"no_soal"`
+	Soal           string                `json:"soal" form:"soal"`
+	GambarSoal     *multipart.FileHeader `form:"gambar_soal"`
+	OpsiA          string                `json:"opsi_a" form:"opsi_a"`
+	OpsiB          string                `json:"opsi_b" form:"opsi_b"`
+	OpsiC          string                `json:"opsi_c" form:"opsi_c"`
+	OpsiD          string                `json:"opsi_d" form:"opsi_d"`
+	OpsiE          string                `json:"opsi_e" form:"opsi_e"`
+	GambarA        *multipart.FileHeader `form:"gambar_a"`
+	GambarB        *multipart.FileHeader `form:"gambar_b"`
+	GambarC        *multipart.FileHeader `form:"gambar_c"`
+	GambarD        *multipart.FileHeader `form:"gambar_d"`
+	GambarE        *multipart.FileHeader `form:"gambar_e"`
+	Kunci          string                `json:"kunci" form:"kunci" validate:"required,len=1"`
 }
 
 type SoalResponse struct {
-	ID         string `json:"id"`
-	IdBankSoal string `json:"id_bank_soal"`
-	NoSoal     int    `json:"no_soal"`
-	Soal       string `json:"soal"`
-	GambarSoal string `json:"gambar_soal"`
-	OpsiA      string `json:"opsi_a"`
-	OpsiB      string `json:"opsi_b"`
-	OpsiC      string `json:"opsi_c"`
-	OpsiD      string `json:"opsi_d"`
-	OpsiE      string `json:"opsi_e"`
-	GambarA    string `json:"gambar_a"`
-	GambarB    string `json:"gambar_b"`
-	GambarC    string `json:"gambar_c"`
-	GambarD    string `json:"gambar_d"`
-	GambarE    string `json:"gambar_e"`
-	Kunci      string `json:"kunci"`
-	CreatedAt  string `json:"created_at"`
-	UpdatedAt  string `json:"updated_at"`
+	ID             string `json:"id"`
+	IdBankSoal     string `json:"id_bank_soal"`
+	IdKategoriSoal string `json:"id_kategori_soal"`
+	NoSoal         int    `json:"no_soal"`
+	Soal           string `json:"soal"`
+	GambarSoal     string `json:"gambar_soal"`
+	OpsiA          string `json:"opsi_a"`
+	OpsiB          string `json:"opsi_b"`
+	OpsiC          string `json:"opsi_c"`
+	OpsiD          string `json:"opsi_d"`
+	OpsiE          string `json:"opsi_e"`
+	GambarA        string `json:"gambar_a"`
+	GambarB        string `json:"gambar_b"`
+	GambarC        string `json:"gambar_c"`
+	GambarD        string `json:"gambar_d"`
+	GambarE        string `json:"gambar_e"`
+	Kunci          string `json:"kunci"`
+	CreatedAt      string `json:"created_at"`
+	UpdatedAt      string `json:"updated_at"`
 }
 
 type SoalListResponse struct {
